# opti-ml-cpp

./: CMakeLists.txt  README.md
examples/: linear_regression.cpp
include/OptiMLCpp/algorithms/: linear_regression.h
include/OptiMLCpp/core/: model.h
include/OptiMLCpp/data/: dataset.h
include/OptiMLCpp/utils/: math_utils.h
scripts/: build_script.sh
src/algorithms/: linear_regression.h
tests/algorithms/: linear_regression.cpp
